cīr spacing fix for Chrome

--- a/style.css
+++ b/style.css
@@ -68,3 +68,7 @@ button {
     margin-top: 2rem;
     font-size: 1.2rem;
 }
+
+ruby {
+    white-space: pre;
+}
